assets/css/style.css
:root 
{
    --primary-color: #fff;
    --secondary-color: #6E6E6E;
}

* 
{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html
{
    scroll-behavior: smooth;
}
  
body
{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    line-height: 1.5;
    color: #333;
    background-color: #323232;
}

h1, h2
{
    margin-bottom: 15px;
    text-shadow: 1px 5px rgba(0, 0, 0, 0.5);
}

h2
{
    font-size: 2rem;
}

.container
{
    max-width: 1500px;
    margin: 0 auto;
    padding: 0 30px;
    flex-wrap: wrap;
}

ul
{
    list-style-type: none;
}

/* navigation start */
.navbar
{
    padding: 20px 35px;
    position: fixed;
    width: 100%;
    background: #111111;
    color: var(--primary-color);
    height: 90px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar .logo
{
    font-size: x-large;
    font-weight: bold;
    text-decoration: none #111111;
    transition: all 0.8s;
    border-bottom: #111111;
}

.navbar .logo:hover
{
    border-bottom: 1px solid red;
    text-decoration: underline;
}

.navbar a
{
    color: var(--primary-color);
    font-size: 18px;
    font-weight: bold;
    text-decoration: none #111111;
    transition: all 0.8s;
    border-bottom: #111111;
}

.navbar a:hover
{
    border-bottom: 1px solid red;
    text-decoration: underline;
}

.navbar ul
{
    display: flex;
}

.navbar ul li
{
    margin-left: 20px;
}

#about-section
{
    scroll-margin-top: 320px;
}

#work-section
{
    scroll-margin-top: 70px;
}
/* navigation end */

/* header start */
.header
{
    background-image: url('../images/header-image.jpg');
    background-size: cover;
    background-position: center;
    color: var(--primary-color);
    height: 700px;
}

.header .container
{
    display: flex;
    align-items: center;
    height: 100%;

}

.header h1
{
    font-size: 5rem;
    font-weight: bold;
    line-height: 1.2;
    border-bottom: 2px solid black;
}

.header p
{
    font-size: 2rem;
    font-weight: bold;
    line-height: 0.9;
}
/* header end */

/* about me section start */
.about .container 
{
    display: flex;
    justify-content: space-between;
    padding-top: 40px;
}

.about-title 
{
    flex: 1;
    color: var(--primary-color);
    margin: 20px 10px;
    padding: 15px 20px;
    border-right: 2px solid var(--secondary-color);
    text-align: right;
}

.about-content 
{
    flex: 3;
    color: var(--primary-color);
    margin: 20px 10px;
    padding: 15px 20px;
}
/* about me section end */

/* work section start */
.work .container 
{
    display: flex;
    justify-content: space-between;
    padding-top: 40px;
}

.work-title 
{
    flex: 1;
    color: var(--primary-color);
    margin: 20px 10px;
    padding: 15px 20px;
    border-right: 2px solid var(--secondary-color);
    text-align: right;
}

.work-content 
{
    flex: 3;
    color: var(--primary-color);
    margin: 20px 10px;
    padding: 15px 20px;
    height: 100%;
}

.work-content .container
{
    padding: 0px;
    flex-flow: row wrap;
}

.work-content .work-project:nth-child(1)
{
    flex: 100%;
    height: 400px;
    background-image: url('../images/p1.jpg');
    filter: brightness(0.8);
    transition: filter 0.5s ease; 
}

.work-content .work-project:nth-child(1):hover
{
    filter: brightness(1.0);
}

.work-content .work-project:nth-child(2)
{
    background-image: url('../images/p2.jpg');
    filter: brightness(0.8);
    transition: filter 0.5s ease; 
}

.work-content .work-project:nth-child(2):hover
{
    filter: brightness(1.0);
}

.work-content .work-project:nth-child(3)
{
    background-image: url('../images/p3.jpg');
    filter: brightness(0.8);
    transition: filter 0.5s ease;
}

.work-content .work-project:nth-child(3):hover
{
    filter: brightness(1.0);
}


.work-content .work-project:nth-child(4)
{
    background-image: url('../images/p4.jpg');
    filter: brightness(0.8);
    transition: filter 0.5s ease;
}

.work-content .work-project:nth-child(4):hover
{
    filter: brightness(1.0);
}


.work-content .work-project:nth-child(5)
{
    background-image: url('../images/p5.jpg');
    filter: brightness(0.8);
    transition: filter 0.5s ease;
}

.work-content .work-project:nth-child(5):hover
{
    filter: brightness(1.0);
}

.work-project
{
    flex: 1 1 40%;
    border: 5px solid gray;
    color: var(--primary-color);
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
    margin: 8px;
    height: 150px;
    background-size: cover;
    background-position: center;
    position: relative;
}

.work-project h2, .work-project .lang-used
{
    text-shadow: 1px 3px rgba(0, 0, 0, 0.5);
    text-align: center;
}

.work-project .lang-used
{
    font-size: 14px;
    margin-top: 3px;
}

.work-project h2
{
    position: absolute;
    bottom: 0;
    width: 150px;
    height: 80px;
    font-size: 1.5rem;
    background-color: gray;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    flex: 2;
}

/* work section end */

/* contact section start */
.contact .container 
{
    display: flex;
    justify-content: space-between;
    padding-top: 40px;
}

.contact a
{
    font-size: 1.1em;
    color: var(--primary-color);
    text-decoration: none;
    margin-right: 30px;
    border-bottom: 2px solid var(--secondary-color);
    transition: all 0.8s;
}

.contact a:hover
{
    color: red;
}

.contact-title 
{
    flex: 1;
    color: var(--primary-color);
    margin: 20px 10px;
    padding: 15px 20px;
    border-right: 2px solid var(--secondary-color);
    text-align: right;
}

.contact-content 
{
    flex: 3;
    color: var(--primary-color);
    margin: 20px 10px;
    padding: 15px 20px;
}
/* contact section end */

/* iphone support start*/
@media screen and (max-width: 575px) 
{
    .navbar
    {
        flex-direction: column;
        height: 160px;
        text-align: center;
    }

    .header .container 
    {
        flex-direction: column;
        padding-top: 200px;
        text-align: center;
    }

    .about-title, .contact-title, .work-title
    {
        border-right: none;
        border-bottom: 2px solid var(--secondary-color);
        text-align: center;
    }

    .about .container 
    {
        flex-direction: column;
        padding-top: 20px;
        text-align: center;
    }

    .work .container 
    {
        flex-direction: column;
        padding-top: 20px;
        text-align: center;
    }

    .work-project
    {
        padding-top: 20px;
        text-align: center;
        height: 100px;
    }
    
    .contact .container 
    {   
        flex-direction: column;
        padding-top: 20px;
        text-align: center;
    }

    .contact a
    {
        padding-top: 50px;
    }
}
/* iphone support end*/

